@@ -48,9 +48,9 @@ class chunk:
 
 streamtype = {
 	0:'Empty ptr',\
-	0x0a:'Prompt    ',0xd:'VBA Project',
+	0x0a:'Prompt    ',0xd:'OLE ',
 	0x14:'Trailer', 0x15:'Page      ', 0x16:'Colors  ',0x18:'Fonts     ',\
-	0x1a:'Styles    ',0x1d:'Stencils ', 0x1e:'Stncl Page', 0x1f:'VBA Data Part',\
+	0x1a:'Styles    ',0x1d:'Stencils ', 0x1e:'Stncl Page', 0x1f:'OLE Data Part',\
 	0x23:'Icon        ',0x27:'Pages      ',0x29:'Windows   ',0x2a:'Window    ',0x2e:'EventList',\
 	0x2f:'EventItem',0x31:'Document',0x32:'NameList',0x33:'Name    ',\
 	0x46:'PageSheet        ',0x47:'ShapeType="Group"',0x48:'ShapeType="Shape"', 0x4a:'StyleSheet    ',\
@@ -265,7 +265,7 @@ def ptr_search (page, data, version, parent):
 		  if pntr.format >>4 == 0xd or pntr.format >>4 == 0xc:
 			  vsdchunks.parse (model, version, iter1, pntr)
 	if vbaflag == 1:
-	  ole.open (vbadata, page, parent)
+	  ole.open (vbadata, page, iter2)
 
 def get_colors (page, data, version, parent):
 	model = page.model
